Minor fix of about-me position on smaller screens

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -189,12 +189,12 @@ header .padding-container
       padding-left: 40px
       padding-right: 40px
   .about-me
-    display: inline-block
     padding-top: 3px
     margin-top: 20px
     font-size: 1.05em
     color: #888888
-    @media screen and (min-width: 740px)
+    @media screen and (min-width: $card-breakpoint + 50)
+      display: inline-block
       float: right
       margin-top: 0
   &:hover
